# CppND-System-Monitor-Project-Updated

./: CMakeLists.txt  Makefile  grep
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: test_monitor.cpp
test/data/etc/: passwd
test/data/proc/: cmdline  cpuinfo  meminfo  stat  uptime  version
test/data/proc/1046/: cgroup  comm  sched  statm  status
test/data/proc/1046/net/: dev_mcast
test/data/proc/1046/task/1046/: children  sched  schedstat  stat
test/data/proc/1047/: cmdline  mountinfo  mounts  sched  stat  status
test/data/proc/1047/net/: igmp  raw6
test/data/proc/1047/task/1047/: sched  schedstat  statm
test/data/proc/12091/: cgroup  comm  sched  schedstat  stat  status
test/data/proc/12091/net/: netlink  netstat  packet  protocols  sockstat
test/data/proc/12091/net/dev_snmp6/: enp0s3
test/data/proc/12091/net/stat/: arp_cache
test/data/proc/12091/task/12091/: limits  sched  schedstat  status
test/data/proc/743/: sched  stat  status
test/data/proc/743/net/: unix
test/data/proc/743/task/743/: cgroup  sched  schedstat  statm
test/data/proc/861/: cgroup  cmdline  limits  mounts  sched  statm  status
test/data/proc/861/attr/apparmor/: current
test/data/proc/861/net/: arp  softnet_stat
test/data/proc/883/: sched  stat
test/data/proc/883/net/: fib_trie  protocols  snmp6  tcp6
test/data/proc/888/: cgroup  sched  schedstat  statm
test/data/proc/888/net/: igmp6  route  sockstat  udp6
(+33 files in other folders)
